Solved flex items not wrapping and growing to fill space when window size decreased.

--- a/styles.css
+++ b/styles.css
@@ -16,23 +16,24 @@ body, #main-form {
 
 #main-form {
     border: 2px solid red;
-    width: 65%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    flex: 1 0 65%;
 }
 
 body {
     display: flex;
     background-color: rgb(246, 246, 246);
+    flex-wrap: wrap;
 }
 
 /* Image styling */
 #image {
-    width: 35%;
     overflow: hidden;
     background-image: url(background.jpg);
     background-size: cover;
+    flex: 1 0 35%;
 }
 
 #banner {
@@ -58,7 +59,7 @@ body {
 #image div:last-child {
     color: white;
     text-align: center;
-    margin-top: 20px;
+    margin: 20px 0;
     letter-spacing: 3px;
     font-weight: bold;
 }
